Repaired overlapping divs

--- a/styles/upcomingEvents.css
+++ b/styles/upcomingEvents.css
@@ -6,8 +6,9 @@
     gap: .5em;
     max-height: 1fr;
 
-    margin-top: 40%;
-    height: 80%;
+    margin-top: 60%;
+    margin-bottom: 40%;
+    height: 100%;
     overflow-y: scroll;
 }
 
